fix: z-index value

--- a/components/navigation/navigation.css
+++ b/components/navigation/navigation.css
@@ -1,6 +1,6 @@
 .navbar{
     top: 0;
-    z-index: 3;  
+    z-index: 1;  
     display: flex;
     justify-content: space-between;
     align-items: center;
